--- a/config.json
+++ b/config.json
@@ -69,6 +69,14 @@
       "api": "https://api.wujinapi.me/api.php/provide/vod",
       "name": "无尽资源"
     },
+    "iqiyi": {
+      "api": "https://www.iqiyizyapi.com/api.php/provide/vod",
+      "name": "iqiyi资源"
+    },
+    "hwba": {
+      "api": "https://cjhwba.com/api.php/provide/vod",
+      "name": "华为吧资源"
+    },
     "wwzy": {
       "api": "https://wwzy.tv/api.php/provide/vod",
       "name": "旺旺短剧"
