--- a/config.json
+++ b/config.json
@@ -11,6 +11,10 @@
       "name": "黑木耳",
       "detail": "https://heimuer.tv"
     },
+     "baidu": {
+      "api": "https://api.apibdzy.com/api.php/provide/vod",
+      "name": "百度云资源"
+    },
     "ruyi": {
       "api": "http://cj.rycjapi.com/api.php/provide/vod",
       "name": "如意资源"
